Quick wins: jsPDF/pdfjs CDN, empty state, IndexedDB error handling, install banner, remove debug handle

--- a/index.html
+++ b/index.html
@@ -201,19 +201,62 @@
         </div>
     </div>
 
+    <!-- PWA Install Banner -->
+    <div id="install-banner" class="install-banner hidden">
+        <span>Add FieldSketch to your home screen for the best experience.</span>
+        <button onclick="installApp()">Install</button>
+        <button onclick="dismissInstall()" class="dismiss">&times;</button>
+    </div>
+
     <!-- Hidden file inputs -->
     <input type="file" id="file-image" accept="image/*" hidden>
     <input type="file" id="file-pdf" accept=".pdf" hidden>
 
+    <!-- PDF libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.2/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script>
+        if (typeof pdfjsLib !== 'undefined') {
+            pdfjsLib.GlobalWorkerOptions.workerSrc =
+                'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+        }
+    </script>
+
     <script type="module" src="js/app.js"></script>
-    <!-- Service worker registration - uncomment for production
+
+    <!-- PWA install prompt -->
+    <script>
+        let _installPrompt = null;
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            _installPrompt = e;
+            const banner = document.getElementById('install-banner');
+            if (banner && !localStorage.getItem('fs-install-dismissed')) {
+                banner.classList.remove('hidden');
+            }
+        });
+        function installApp() {
+            if (_installPrompt) {
+                _installPrompt.prompt();
+                _installPrompt.userChoice.then(() => {
+                    document.getElementById('install-banner').classList.add('hidden');
+                    _installPrompt = null;
+                });
+            }
+        }
+        function dismissInstall() {
+            document.getElementById('install-banner').classList.add('hidden');
+            localStorage.setItem('fs-install-dismissed', '1');
+        }
+    </script>
+
+    <!-- Service worker registration -->
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('./sw.js')
-                .then(reg => console.log('SW registered'))
-                .catch(err => console.warn('SW registration failed:', err));
+                .then(() => {})
+                .catch(() => {});
         }
     </script>
-    -->
 </body>
 </html>
